DevTools: Remove page reloading blanket

DevTools used to place a "reloading blanket" over a page when DevTools are open
and performance session being recorded.

The patch removes page screen tampering logic and records whatever is
really being dispalyed.

BUG=837874

Change-Id: Id50385477069400451f445017f53998d0a0cdee8
Reviewed-on: https://chromium-review.googlesource.com/1033505
Commit-Queue: Alexei Filippov <alph@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555193}
Former-commit-id: fca78fd5c8e776774195ad2af6abdecfbac14024