third_party/blink/renderer/core/exported/web_view_impl.cc
@@ -3585,8 +3585,6 @@ void WebViewImpl::SetRootGraphicsLayer(GraphicsLayer* graphics_layer) {
     layer_tree_view_->SetDeferCommits(true);
     layer_tree_view_->ClearRootLayer();
     layer_tree_view_->ClearViewportLayers();
-    if (WebDevToolsAgentImpl* dev_tools = MainFrameDevToolsAgentImpl())
-      dev_tools->RootLayerCleared();
   }
 }
 
@@ -3606,8 +3604,6 @@ void WebViewImpl::SetRootLayer(WebLayer* layer) {
     layer_tree_view_->SetDeferCommits(true);
     layer_tree_view_->ClearRootLayer();
     layer_tree_view_->ClearViewportLayers();
-    if (WebDevToolsAgentImpl* dev_tools = MainFrameDevToolsAgentImpl())
-      dev_tools->RootLayerCleared();
   }
 }
 
